--- a/_posts/2022-09-03-c64-overview.md
+++ b/_posts/2022-09-03-c64-overview.md
@@ -4,17 +4,17 @@ title:  "Commodore 64 overview"
 tag: Commodore 64
 ---
 
-A buddy gifted me this Commodore 64 and a big stack of accompanying floppy disks. This seemed like a great computer to start with. Unsurprisingly, given that it was was the best-selling personal computer of all time, there's a big, friendly, welcoming scene of people restoring them and modding them today. I've gotten tons of helpful pointers from folks in person and on Twitter. It's easy to find parts, and there are some nifty new mods being produced. This is going to be my first attempted restoration. I'm uncertain about how retrobriting will go in gloomy Seattle, and I haven't done serious soldering since middle school. If I mess something up too badly, it'll probably be straightforward enough to replace whatever I break. 🤞
+A buddy gifted me this Commodore 64 and a big stack of accompanying floppy disks. This seemed like a great computer to start with. Unsurprisingly, given that it was was the best-selling personal computer of all time, there's a big, friendly, welcoming scene of people restoring them and modding them today. I've gotten tons of helpful pointers from folks in person and on Twitter. It's easy to find parts, and there are some nifty new mods being produced. This is going to be my first attempted restoration. I'm uncertain  how retrobriting will go in gloomy Seattle, and I haven't done serious soldering since middle school. I figure, if I mess something up too badly, it'll be straightforward enough to replace whatever I break. 🤞
 
 ![Commodore 64c top view](/assets/images/c64/IMG_7704.jpeg) 
 
-It's a [Commodore 64c](https://www.old-computers.com/museum/computer.asp?st=1&c=998), which was the famous "breadbin" C64 repackaged into a slimmer case that matched the style of Commodore's next generation of computers. But... the more I look at this, a few things seem off. The keyboard is the wrong color: the [breadbin C64s](https://www.old-computers.com/museum/computer.asp?c=98) had these dark brown keys, and I can't find records of any C64c model that used them. The case also doesn't snap closed in the front.  
+It's a [Commodore 64c](https://www.old-computers.com/museum/computer.asp?st=1&c=998), which was the mega-popular "breadbin" C64 repackaged into a slimmer case that matched the style of Commodore's next generation of computers. But... the more I look at this, a few things seem odd. The keyboard is the wrong color: the [breadbin C64s](https://www.old-computers.com/museum/computer.asp?c=98) had these dark brown keys, and I can't find records of any C64c model that used them. The case also doesn't snap closed in the front, like all the interior components are just too thick for the slim case.  
 
 ![Commodore 64c side view](/assets/images/c64/IMG_7705.jpeg) ![Commodore 64c interior view](/assets/images/c64/IMG_7706.jpeg)
 
-Inside, it has the original "long" style motherboard. All the screws were removed, and everything is just sitting loose in the case. It looks like somebody put some sort of white stuff (thermal paste?) on some of the chips. 
+Inside, it has the original "long" style motherboard, common to both the "breadbin" C64 and the first models of C64c. All the screws were removed, and everything is sitting loose in the case. It looks like somebody put some sort of white stuff on some of the chips, maybe thermal paste to improve the connection to the big metal RF shield/heat sink. 
 
-I wonder if this is actually a breadbin C64 that somebody removed from its original case and put into a C64c case. I found an ivory-colored keyboard on ebay, so I'll be able to fix the appearance, but I don't think I'll be able to get the case to close.
+I wonder if this is actually a breadbin C64 that somebody removed from its original case and put into a C64c case. I found an ivory-colored keyboard on ebay, so I'll be able to improve the appearance, but I don't think I'll be able to get the case to close. It might actually be better to try to get my hands on an empty breadbin case.
 
  ![Replacement keyboard with ivory-colored keys](/assets/images/c64/IMG_7707.jpeg)
 
