--- a/_posts/2022-10-10-c64-c64os.md
+++ b/_posts/2022-10-10-c64-c64os.md
@@ -4,11 +4,11 @@ title:  "Commodore 64 cleanup and C64OS"
 tag: Commodore 64
 ---
 
-Let's clean up the [Commodore 64C components]({% post_url 2022-09-03-c64-overview %}) a friend gave me, and assemble them into a working computer. The first step is to clean the motherboard, especially the thermal paste on a bunch of the ICs, and eyeball it for problems. It cleans up nice, and looks to be in great condition.
+Let's clean up the [Commodore 64C components]({% post_url 2022-09-03-c64-overview %}) a friend gave me, and assemble them into a working computer. The first step is to clean the motherboard, especially the thermal paste on a bunch of the ICs, and eyeball it for problems. It cleans up nice, and looks to be in great condition. The metal RF shield in this computer doubles as a heat sink for the ICs that run hottest, and everything I've read says that thermal paste is superfluous, so let's get rid of that glop and not replace it.
 
 ![Commodore 64c interior view](/assets/images/c64/IMG_7706.jpeg) ![Commodore 64c motherboard cleaned](/assets/images/c64/IMG_8073.jpeg)
 
-My plan was to [recap everything](https://inanis.net/replacing-leaky-capacitors/) and install a [JiffyDOS](https://www.c64-wiki.com/wiki/JiffyDOS) kernal. I was so happy to see that the 28-pin kernal ROM is conveniently installed in a socket that will be easy to pop out and replace. And then... once I sat down to actually replace it, I discovered that I had been looking at the wrong chip, and that on [this motherboard](https://www.c64-wiki.com/wiki/Motherboard#B-3) the *24-pin* kernal ROM is in fact soldered directly to the PCB. :facepalm: In addition to being a pain in the butt, it means I have the wrong-sized JiffyDOS.
+My plan was to [recap everything](https://inanis.net/replacing-leaky-capacitors/) and install a [JiffyDOS](https://www.c64-wiki.com/wiki/JiffyDOS) kernal. I was so happy to see that the 28-pin kernal ROM is conveniently installed in a socket that will be easy to pop it out of and replace. And then... once I sat down to actually replace it, I realized that I had been looking at the wrong chip, and that on [this motherboard](https://www.c64-wiki.com/wiki/Motherboard#B-3) the *24-pin* kernal ROM is in fact soldered directly to the PCB. :facepalm: In addition to being a pain in the butt, it means I have the wrong-sized JiffyDOS.
 
 So I'll re-order the correct JiffyDOS. The capacitors look cromulent for the time being, so I'll save all the soldering for a later day. I'm also going to probably wait until next summer to do any retrobriting.
 
@@ -24,7 +24,7 @@ I don't have a joystick yet, so here's a [text adventure](https://www.mobygames.
 
 ![Infocom 4-in-1 sampler on Commodore 64 screen](/assets/images/c64/IMG_8087.jpeg) ![Commodore 64 running C64OS](/assets/images/c64/IMG_8090.jpeg)
 
-I have a left-over brown keyboard that only works so-so. In a nice bit of fortune, the friendly folks at the Kennett Classic computer museum threw a spare empty breadbin case my way. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't function. 
+I have a left-over brown keyboard that only works so-so. In a nice bit of fortune, the friendly folks at the [Kennett Classic computer museum](https://www.kennettclassic.com/) threw a spare empty breadbin case my way. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't do anything. It makes for a nice display piece, at least. 
 
 ![Empty Commodore 64 case](/assets/images/c64/IMG_8069.jpeg) ![Commodore 64 components drying](/assets/images/c64/IMG_8070.jpeg)
 ![Craft foam inside Commodore 64](/assets/images/c64/IMG_8076.jpeg) ![Commodore 64 held together with straps](/assets/images/c64/IMG_8077.jpeg)
