--- a/_posts/2022-10-10-c64-c64os.md
+++ b/_posts/2022-10-10-c64-c64os.md
@@ -20,11 +20,11 @@ Here it is with the [Epyx FastLoad Reloaded](https://www.thefuturewas8bit.com/sh
 
 ![Accessories installed in Commodore 64](/assets/images/c64/IMG_8083.jpeg) ![Commodore 64 running](/assets/images/c64/IMG_8081.jpeg)
 
-I don't have a joystick yet, so here's a [text adventure](https://www.mobygames.com/game/four-in-one-infocom-sampler) and the brand new [C64OS](https://c64os.com/), both running great.
+I don't have a joystick yet, so here's a [text adventure](https://www.mobygames.com/game/four-in-one-infocom-sampler) and the brand new [C64OS](https://c64os.com/), both running great. C64OS deserves special mention here. I've barely scratched the surface of it, but it's a truly mind-blowing piece of software. An easy to use modern operating system... written in 6502 assembly, that runs in 64k of RAM. It's a true engineering marvel. It goes way beyond the minimum amount of functionality it needs to be serviceable - it includes little quality of life delights like visual themes, background images, and a menubar clock. I LOL'd when the installer at one point said something along the lines of, "Hey, I notice you have an SD2IEC attached to this computer. Do you mind if I use its oscillator to make some UI features work better?"
 
 ![Infocom 4-in-1 sampler on Commodore 64 screen](/assets/images/c64/IMG_8087.jpeg) ![Commodore 64 running C64OS](/assets/images/c64/IMG_8090.jpeg)
 
-I have a left-over brown keyboard that only works so-so. In a nice bit of fortune, the friendly folks at the [Kennett Classic computer museum](https://www.kennettclassic.com/) threw a spare empty breadbin case my way. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't do anything. It makes for a nice display piece, at least. 
+I have a left-over brown keyboard from the original pile of parts that only works so-so. In a nice bit of fortune, the friendly folks at the [Kennett Classic computer museum](https://www.kennettclassic.com/) threw a spare empty breadbin case my way. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't do anything. It makes for a nice display piece, at least. 
 
 ![Empty Commodore 64 case](/assets/images/c64/IMG_8069.jpeg) ![Commodore 64 components drying](/assets/images/c64/IMG_8070.jpeg)
 ![Craft foam inside Commodore 64](/assets/images/c64/IMG_8076.jpeg) ![Commodore 64 held together with straps](/assets/images/c64/IMG_8077.jpeg)
