--- a/_posts/2022-10-10-c64-c64os.md
+++ b/_posts/2022-10-10-c64-c64os.md
@@ -6,7 +6,7 @@ tag: Commodore 64
 
 Let's clean up the [Commodore 64C components]({% post_url 2022-09-03-c64-overview %}) a friend gave me, and assemble them into a working computer. The first step is to clean the motherboard, especially the thermal paste on a bunch of the ICs, and eyeball it for problems. It cleans up nice, and looks to be in great condition. The metal RF shield in this computer doubles as a heat sink for the ICs that run hottest, and everything I've read says that thermal paste is superfluous, so let's get rid of that glop and not replace it.
 
-![Commodore 64c interior view](/assets/images/c64/IMG_7706.jpeg) ![Commodore 64c motherboard cleaned](/assets/images/c64/IMG_8073.jpeg)
+[![Commodore 64c motherboard](/assets/images/c64/t/IMG_7719.jpeg)](/assets/images/c64/IMG_7719.jpeg) [![Commodore 64c motherboard cleaned](/assets/images/c64/t/IMG_8073.jpeg)](/assets/images/c64/IMG_8073.jpeg)
 
 My plan was to [recap everything](https://inanis.net/replacing-leaky-capacitors/) and install a [JiffyDOS](https://www.c64-wiki.com/wiki/JiffyDOS) kernal. I was so happy to see that the 28-pin kernal ROM is conveniently installed in a socket that will be easy to pop it out of and replace. And then... once I sat down to actually replace it, I realized that I had been looking at the wrong chip, and that on [this motherboard](https://www.c64-wiki.com/wiki/Motherboard#B-3) the *24-pin* kernal ROM is in fact soldered directly to the PCB. :facepalm: In addition to being a pain in the butt, it means I have the wrong-sized JiffyDOS.
 
@@ -14,17 +14,16 @@ So I'll re-order the correct JiffyDOS. The capacitors look cromulent for the tim
 
 The case and keyboard get a good cleaning, and then assembly begins. The replacement keyboard and [replacement screw kit](https://retroleum.co.uk/) fit like a glove. New footie pads to replace ones that had gone missing, and this thing is a beauty!
 
-![Commodore 64 motherboard in case](/assets/images/c64/IMG_8074.jpeg) ![Interior of Commodore 64 assembled](/assets/images/c64/IMG_8075.jpeg) ![New footie pad on Commodore 64](/assets/images/c64/IMG_8080.jpeg) ![Restored Commodore 64c top view](/assets/images/c64/IMG_8078.jpeg) ![Restored Commodore 64c side view](/assets/images/c64/IMG_8079.jpeg)
+[![Commodore 64 motherboard in case](/assets/images/c64/t/IMG_8074.jpeg)](/assets/images/c64/IMG_8074.jpeg) [![Interior of Commodore 64 assembled](/assets/images/c64/t/IMG_8075.jpeg)](/assets/images/c64/IMG_8075.jpeg) [![New footie pad on Commodore 64](/assets/images/c64/t/IMG_8080.jpeg)](/assets/images/c64/IMG_8080.jpeg) [![Restored Commodore 64c top view](/assets/images/c64/t/IMG_8078.jpeg)](/assets/images/c64/IMG_8078.jpeg) [![Restored Commodore 64c side view](/assets/images/c64/t/IMG_8079.jpeg)](/assets/images/c64/IMG_8079.jpeg)
 
 Here it is with the [Epyx FastLoad Reloaded](https://www.thefuturewas8bit.com/shop/commodore/eflr.html) cartridge and [SD2IEC](https://hackaday.io/project/171759-c64-sd2iec-lp), and it runs! No magic smoke! 
 
-![Accessories installed in Commodore 64](/assets/images/c64/IMG_8083.jpeg) ![Commodore 64 running](/assets/images/c64/IMG_8081.jpeg)
+[![Accessories installed in Commodore 64](/assets/images/c64/t/IMG_8083.jpeg)](/assets/images/c64/IMG_8083.jpeg) [![Commodore 64 running](/assets/images/c64/t/IMG_8081.jpeg)](/assets/images/c64/IMG_8081.jpeg)
 
 I don't have a joystick yet, so here's a [text adventure](https://www.mobygames.com/game/four-in-one-infocom-sampler) and the brand new [C64OS](https://c64os.com/), both running great. C64OS deserves special mention here. I've barely scratched the surface of it, but it's a truly mind-blowing piece of software. An easy to use modern operating system... written in 6502 assembly, that runs in 64k of RAM. It's a true engineering marvel. It goes way beyond the minimum amount of functionality it needs to be serviceable - it includes little quality of life delights like visual themes, background images, and a menubar clock. I LOL'd when the installer at one point said something along the lines of, "Hey, I notice you have an SD2IEC attached to this computer. Do you mind if I use its oscillator to make some UI features work better?"
 
-![Infocom 4-in-1 sampler on Commodore 64 screen](/assets/images/c64/IMG_8087.jpeg) ![Commodore 64 running C64OS](/assets/images/c64/IMG_8090.jpeg)
+[![Infocom 4-in-1 sampler on Commodore 64 screen](/assets/images/c64/t/IMG_8087.jpeg)](/assets/images/c64/IMG_8087.jpeg) [![Commodore 64 running C64OS](/assets/images/c64/t/IMG_8090.jpeg)](/assets/images/c64/IMG_8090.jpeg)
 
-I have a left-over brown keyboard from the original pile of parts that only works so-so. In a nice bit of fortune, the friendly folks at the [Kennett Classic computer museum](https://www.kennettclassic.com/) threw a spare empty breadbin case my way. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't do anything. It makes for a nice display piece, at least. 
+I have a left-over brown keyboard from the original pile of parts that only works so-so. In a nice bit of fortune, the friendly folks at the [Kennett Classic computer museum](https://www.kennettclassic.com/) threw a spare empty breadbin case my way, with some broken bits on the inside. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't do anything. It makes for a nice display piece, at least. 
 
-![Empty Commodore 64 case](/assets/images/c64/IMG_8069.jpeg) ![Commodore 64 components drying](/assets/images/c64/IMG_8070.jpeg)
-![Craft foam inside Commodore 64](/assets/images/c64/IMG_8076.jpeg) ![Commodore 64 held together with straps](/assets/images/c64/IMG_8077.jpeg)
+[![Empty Commodore 64 case](/assets/images/c64/t/IMG_8069.jpeg)](/assets/images/c64/IMG_8069.jpeg [![Commodore 64 components drying](/assets/images/c64/t/IMG_8070.jpeg)](/assets/images/c64/IMG_8070.jpeg) [![Craft foam inside Commodore 64](/assets/images/c64/t/IMG_8076.jpeg)](/assets/images/c64/IMG_8076.jpeg) [![Commodore 64 held together with straps](/assets/images/c64/t/IMG_8077.jpeg)](/assets/images/c64/IMG_8077.jpeg)
