--- a/_posts/2022-10-10-c64-c64os.md
+++ b/_posts/2022-10-10-c64-c64os.md
@@ -26,4 +26,4 @@ I don't have a joystick yet, so here's a [text adventure](https://www.mobygames.
 
 I have a left-over brown keyboard from the original pile of parts that only works so-so. In a nice bit of fortune, the friendly folks at the [Kennett Classic computer museum](https://www.kennettclassic.com/) threw a spare empty breadbin case my way, with some broken bits on the inside. A good bath, a bit of glue, and a skosh of craft foam, and I'll have something that *looks* like a breadbin C64, even if it (obviously) doesn't do anything. It makes for a nice display piece, at least. 
 
-[![Empty Commodore 64 case](/assets/images/c64/t/IMG_8069.jpeg)](/assets/images/c64/IMG_8069.jpeg [![Commodore 64 components drying](/assets/images/c64/t/IMG_8070.jpeg)](/assets/images/c64/IMG_8070.jpeg) [![Craft foam inside Commodore 64](/assets/images/c64/t/IMG_8076.jpeg)](/assets/images/c64/IMG_8076.jpeg) [![Commodore 64 held together with straps](/assets/images/c64/t/IMG_8077.jpeg)](/assets/images/c64/IMG_8077.jpeg)
+[![Empty Commodore 64 case](/assets/images/c64/t/IMG_8069.jpeg)](/assets/images/c64/IMG_8069.jpeg) [![Commodore 64 components drying](/assets/images/c64/t/IMG_8070.jpeg)](/assets/images/c64/IMG_8070.jpeg) [![Craft foam inside Commodore 64](/assets/images/c64/t/IMG_8076.jpeg)](/assets/images/c64/IMG_8076.jpeg) [![Commodore 64 held together with straps](/assets/images/c64/t/IMG_8077.jpeg)](/assets/images/c64/IMG_8077.jpeg)
