--- a/_posts/2023-03-19-copland.md
+++ b/_posts/2023-03-19-copland.md
@@ -5,7 +5,7 @@ tag: Beige Macintoshes
 imagedir: beigemacs
 ---
 
-In the mid 1990s I was one of the enthusiastic Macintosh users eagerly awaiting the arrival of Mac OS 8 ("[Copland](https://wiki.preterhuman.net/Apple_Copland)"), the operating system that would be Apple's successor to System 7. Copland was to be a modern operating system for the Macintosh, with preemptive multitasking, multithreading, dynamically allocated protected memory, fully PowerPC-native with SMP support for multiple processors, and sporting an attractive new themeable Platinum user interface with exciting built in themes. (Wow did these not age well.) So many buzzwords, but all of them tangible quality-of-life improvements for people who used computers a lot. I had gotten a taste of UNIX workstations from Sun and SGI, and Red Hat Linux, Windows 95, and Windows XP were starting to bring these technologies to home computer users. I spent hours with BeOS and MKLinux, modern operating systems that could run on my Macintosh hardware, but that of course still couldn't run System 7 programs natively. For that I would need to wait for Copland... and wait and wait, as Copland turned into a [legendary failed software project](https://www.pcworld.com/article/537052/it_project_failures.html) that never saw the light of day.
+In the mid 1990s I was one of the enthusiastic Macintosh users eagerly awaiting the arrival of Mac OS 8 ("[Copland](https://wiki.preterhuman.net/Apple_Copland)"), the operating system that would be Apple's successor to System 7. [Copland](https://lowendmac.com/2005/apples-copland-project/) was to be a modern operating system for the Macintosh, with [preemptive multitasking](https://www.webopedia.com/definitions/multitasking/), [multithreading](https://www.javatpoint.com/multithreading-models-in-operating-system), [dynamically allocated](https://chortle.ccsu.edu/assemblytutorial/chapter-33/ass33_3.html) [protected memory](https://en.wikipedia.org/wiki/Memory_protection), fully [PowerPC](https://apple.fandom.com/wiki/PowerPC)-native with [SMP](https://en.wikipedia.org/wiki/Symmetric_multiprocessing) support for multiple processors, and sporting an attractive new [Platinum user interface](https://lowendmac.com/wp-content/uploads/appearence.png) with exciting built in themes. (Wow did these [not](https://lowendmac.com/wp-content/uploads/copland2.png) [age](https://lowendmac.com/wp-content/uploads/copland3.png) [well](https://forum.opendesktop.org/uploads/default/original/3X/d/3/d37cf19cc244fd90c06d3bd244477af942b8c36c.gif).) So many buzzwords, but all of them tangible quality-of-life improvements for people who used computers a lot. I had gotten a taste of UNIX workstations from Sun and SGI, and Red Hat Linux, Windows 95, and Windows XP were starting to bring these technologies to home computer users. I spent hours with [BeOS](https://www.operating-system.org/betriebssystem/_english/bs-beos.htm) and [MKLinux](https://apple.fandom.com/wiki/MkLinux), modern operating systems that could run on my Macintosh hardware, but that of course still couldn't run System 7 programs natively. For that I would need to wait for Copland... and wait and wait, as Copland turned into a [legendary failed software project](https://www.pcworld.com/article/537052/it_project_failures.html) that [never saw the light of day](https://liam-on-linux.livejournal.com/60604.html).
 
 Except that it saw the *teeniest* bit of daylight. Anticipating launch, Apple produced a small amount of [marketing](https://archive.org/details/bitsavers_applemacderoductiontoCopland1995_78505) and [technical](https://archive.org/details/bitsavers_applemacdendTechnicalOverview19950505_973759/mode/2up) documentation, published and sold a [book](https://archive.org/details/mac_Mac_OS_8_Revealed_1996) describing Copland technology at a very high level, and released three builds of the operating system to partners and developers. These builds don't run on any known emulators. For [#Marchintosh2023](https://www.marchintosh.com/) I thought, can I get one of these beta builds running on actual Macintosh hardware from the era? Can I actually use Copland as an operating system?
 
@@ -18,7 +18,7 @@ This is the kind of project that's a perfect fit for a [BlueSCSI drive](https://
 {% include pic.html n=9620 alt="Power Macintosh 6100/60AV" %}
 {% include pic.html n=9622 alt="Power Macintosh 6100/60AV with case removed and CD drive installed" %}
 
-The largest Apple-branded SCSI hard drive I have is 230MB, unless I want to pull apart one of my other working vintage Macintoshes. (I do not.) "How to install Mac OS 8 (D11E4)" says "Your hard disk must be 250MB or greater. This requirements is fixed for DR1. After DR1 we will reevaluate this limitation." On the other hand, "Mac OS 8 (D11E4) Release Notes" says "'Not enough capacity' error message now reflects minimum HD capacity value of 230MB for DR1." So will it work? ¯\_(ツ)_/¯ Also, "DR1" doesn't match to any other version string I see anywhere.
+The largest Apple-branded SCSI hard drive I have is 230MB, unless I want to pull apart one of my other working vintage Macintoshes. (I do not.) "How to install Mac OS 8 (D11E4)" says "Your hard disk must be 250MB or greater. This requirements is fixed for DR1. After DR1 we will reevaluate this limitation." On the other hand, "Mac OS 8 (D11E4) Release Notes" says "'Not enough capacity' error message now reflects minimum HD capacity value of 230MB for DR1." So will it work? ¯\\\_(ツ)\_/¯ Also, "DR1" doesn't match to any other version string I see anywhere.
 
 The instructions are to start with a fresh minimal install of System 7.5.X. Mindful of how I'm already pushing the minimum hard drive size, I do a "minimal install", which I then realize doesn't include CD-ROM support. Oops. Back to the installer to add that.
 
@@ -63,7 +63,7 @@ Overall, it's very slow. Visual artifacts are frequent: note the black line to t
 
 {% include pic.html n=9655 alt="AppleCD Audio Player in Copland" %}
 
-Rebooting, I try the Chooser and Copland immediately crashes again. Even though Copland's memory protection should prevent one misbehaving program from taking out the operating system, Copland's design is actually that all programs that have user interfaces run together in a single memory space, and share time through cooperative multitasking. True preemptive multitasking and memory isolation were planned to follow in a subsequent operating called "Gershwin".
+Rebooting, I try the Chooser and Copland immediately crashes again. Even though Copland's memory protection should prevent one misbehaving program from taking out the operating system, Copland's design is actually that all programs that have user interfaces run together in a single memory space, and share time through cooperative multitasking. True preemptive multitasking and memory isolation were planned to follow in a subsequent operating called "[Gershwin](https://apple.fandom.com/wiki/Gershwin)".
 
 {% include pic.html n=9658 alt="Copland Chooser" %}
 
