--- a/_posts/2023-08-05-amiga-500.md
+++ b/_posts/2023-08-05-amiga-500.md
@@ -36,7 +36,7 @@ Uh oh. The picture is really corrupted. Is something on the board corroded or lo
 
 {% include pic.html n=8594 alt="Video output section of the main board" %}
 
-Maybe it's an NTSC/PAL issue? I read that you can tell from Jumper ***TODO: which one?***. Looks like this is indeed NTSC.
+Maybe it's an NTSC/PAL issue? Nope, from the jumpers it looks like this is indeed NTSC.
 
 {% include pic.html n=8598 alt="Fat Angus" %}
 
@@ -48,4 +48,4 @@ Sure enough, I try composite output, and the image is much clearer.
 
 {% include pic.html n=8602 alt="Less corrupted Amiga screen image" %}
 
-***Try the other adapters***
+Okay, so I need to repair or replace the external VGA adapter. To be continued...
