--- a/_posts/2022-09-29-g4-mdd-mac-os-9.md
+++ b/_posts/2022-09-29-g4-mdd-mac-os-9.md
@@ -11,14 +11,14 @@ I'm *pretty sure* the [1.25GHz single-CPU "Mirrored Drive Door" Power Macintosh 
 
 {% include pic.html n='0829' alt="2003 G4 MDD Mac Pro" %}
 
-I found something close - a [1.0GHz dual CPU](https://everymac.com/systems/apple/powermac_g4/specs/powermac_g4_1.0_dp_mdd.html) - at [RePC](http://www.repc.com/). Somebody already maxed out the RAM to 2GB and swapped the IDE hard drive for a 500GB one, which is great but too big to boot Mac OS 9 from. So first, let's add a 120GB SSD boot volume: [this SSD drive](https://www.amazon.com/gp/product/B01M3R9JJG), with an [IDE-to-SATA adapter](https://www.newegg.com/startech-ide2sat2-ide-to-sata-with-odd-support/p/N82E16812400465) and [2.5" to 3.5" mounting bracket](https://www.newegg.com/corsair-cssd-brkt1-1-x-2-5-drive-to-3-5-bay/p/N82E16817979016s). The G4 has two drive bays, and the assembled SSD kit fits nicely into the horizontal one.
+I found something close - a [1.0GHz dual CPU](https://everymac.com/systems/apple/powermac_g4/specs/powermac_g4_1.0_dp_mdd.html) model - at [RePC](http://www.repc.com/). Somebody already maxed out the RAM to 2GB and swapped the IDE hard drive for a 500GB one, which is great but too big to boot Mac OS 9 from. So first, let's add a 120GB SSD boot volume: [this SSD drive](https://www.amazon.com/gp/product/B01M3R9JJG), with an [IDE-to-SATA adapter](https://www.newegg.com/startech-ide2sat2-ide-to-sata-with-odd-support/p/N82E16812400465) and [2.5" to 3.5" mounting bracket](https://www.newegg.com/corsair-cssd-brkt1-1-x-2-5-drive-to-3-5-bay/p/N82E16817979016s). The G4 has two drive bays, and the assembled SSD kit fits nicely into the horizontal one.
 
 {% include pic.html n='0155' alt="SSD upgrade components" %}
 {% include pic.html n='0157' alt="SSD upgrade components, assembled" %}
 {% include pic.html n='0161' alt="SSD upgrade components, mounted" %}
 {% include pic.html n='0162' alt="SSD upgrade components, installed" %}
 
-The dual G4 CPUs are on a daughtercard that's super straightforward to replace. The giant passive heatsink is connected with a few easy-to-reach screws, and the daughtercard pulls right off. I'll replace it with a single 1.25GHz G4 CPU.
+The dual G4 CPUs are on a daughtercard that's super straightforward to replace. The giant passive heatsink is connected with a few easy-to-reach screws, and the daughtercard pulls right off. I'll replace it with a single 1.25GHz G4 CPU from eBay.
 
 {% include pic.html n='0830' alt="Power Macintosh G4 interior" %}
 {% include pic.html n='0835' alt="Power Macintosh G4 CPU daughtercard" %}
@@ -27,15 +27,15 @@ The dual G4 CPUs are on a daughtercard that's super straightforward to replace. 
 {% include pic.html n='0833' alt="1.25GHz PowerPC G4 CPU" %}
 {% include pic.html n='0839' alt="Power Macintosh G4 1.25GHz CPU installed" %}
 
-Capacitors look good, fresh battery, no leakage, and a bunch of dust blown and washed off, and let's boot it up! Migrating the "[Mac OS 9 Lives!](https://www.macintoshrepository.org/126-mac-os-9-2-2-universal-installer-2013-macos9lives-edition-w-cpu-5-9-rom-10-2-1-for-unsupported-g4-like-fw800-mdd-emac-)" installation from the HDD to the SSD is hilariously easy: copy the system folder to the new drive and select it in the Startup Disk control panel. Apple System Profiler shows the CPU upgrade as expected.
+Capacitors look good, tossed in a fresh battery, checked for leakage (none!), and a bunch of dust blown and washed off, and let's boot it up! Migrating the "[Mac OS 9 Lives!](https://www.macintoshrepository.org/126-mac-os-9-2-2-universal-installer-2013-macos9lives-edition-w-cpu-5-9-rom-10-2-1-for-unsupported-g4-like-fw800-mdd-emac-)" installation from the HDD to the SSD is hilariously easy: copy the system folder to the new drive and select it in the Startup Disk control panel. Good old Classic Mac OS. Apple System Profiler shows the CPU upgrade as expected.
 
 {% include pic.html n='0169' alt="Power Macintosh G4 booting" %}
 {% include pic.html n='0168' alt="Copy to Macintosh SSD" %}
 {% include pic.html n='0170' alt="Startup Disk control panel" %}
 {% include pic.html n='0841' alt="CPU speed in Apple System Profiler" %}
 
-And... success! It's indeed so fast: Mac OS 9 absolutely cracks on this hardware - it's clear this was the gold standard experience of the day. It feels more responsive than emulated Mac OS 9, although I'm willing to admit this might be a matter of perception. Long-running CPU-bound tasks like file compression or image conversion are quite a bit slower than on emulated machines. And it is, famously, very loud.
+And... success! It's indeed so fast: Mac OS 9 absolutely cracks on this hardware - it's clear this was the gold standard experience of the day. It feels more responsive than emulated Mac OS 9, although I'm willing to admit this might be a matter of perception. Long-running CPU-bound tasks like file compression or image conversion are quite a bit slower than on emulated machines. And the case fans are, famously, very loud.
 
-In theory there's one more upgrade I could do. Sonnet released a 1.8GHz CPU upgrade,the "[Sonnet Encore/MDX G4 Duet](https://www.sonnettech.com/publicfiles/pdfs/pdf_datasheets/encore_mdxg4duet_datasheet.pdf)" (warning PDF!), that's hard to find used. In the meantime I've been loading this up with a bunch of the great late-1990s/early-aughts multimedia macintosh software thanks to [Macintosh Garden](https://macintoshgarden.org/), and lots of fun game demos from my own [ClassicMacDemos.com](https://classicmacdemos.com/) side project.
+In theory there's one more upgrade I could do. Sonnet released a 1.8GHz CPU upgrade,the "[Sonnet Encore/MDX G4 Duet](https://www.sonnettech.com/publicfiles/pdfs/pdf_datasheets/encore_mdxg4duet_datasheet.pdf)" (warning PDF!), that's proven hard to find used. In the meantime I've been loading this up with a bunch of the great late-1990s/early-aughts multimedia macintosh software thanks to [Macintosh Garden](https://macintoshgarden.org/), and lots of fun game demos from my own [ClassicMacDemos.com](https://classicmacdemos.com/) side project.
 
-As with many retrocomputing projects, part of the fun is running hardware configurations and software that were totally unaffordable at the time they were released. It's a nostalgic but also very luxurious experience. And while retrocomputing is hardly a free hobby, it's fun to get a peek into a world of high end computing power that I still remember aspiring to a couple decades ago.
+As with many retrocomputing projects, part of the fun is running hardware configurations and software that were totally unaffordable at the time they were released. It's a nostalgic and simultaneously very luxe experience. And while retrocomputing is hardly a free hobby, it's fun to go visit a world of top-of-the-line computing that I still remember aspiring to a couple decades ago.
